# TTRSS-Dashboard

./: .deepsource.toml  .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Pipfile  README.md  app.py  getdata.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  docker-image.yml  docker-publish.yml  pylint.yml
.streamlit/: config.toml
src/: database.py  models.py  services.py
src/ui/: analysis.py  dashboard.py  main.py
templates/: category.html  feed.html  hello.html  homepage.html
tests/: test_services.py  test_services_advanced.py
